--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
             <a href="#contactanos">contáctanos</a>
         </nav>
             <div class="iconos"> 
-            <a href="#" class="fas fa-search" id="search"></a>
+            <a href="#" class="fas fa-search" id="lupa"></a>
             <a href="#" class="fas fa-heart" id="favoritos"></a> 
             <a href="#" class="fas fa-shopping-cart" id="verCarrito"></a>
+            </div>
+
+            <div id="buscador" class="buscador">
+                <form action="" id="form">
+                    <input type="text" id="formulario" name ="formulario" placeholder="Buscar producto">
+                    <button type="submit" id="buscar" value="enviar">🔍</button>
+                </form>
             </div>
 
     </header>
@@ -74,14 +81,13 @@
         <div class="caja-contenedora" id="caja-contenedora">
         </div>
     </section>
-
-    <section class="busqueda" id="busqueda">
-        <div class="busqueda" id="busqueda">
-            <h1>Buscar Producto</h1>
+<!-- 
+    <form class="busqueda" id="busqueda">
+        <div class="m-search-close m-moda desk custom-cursor-on-hover">
             <input type="text" id="formulario" name ="formulario" placeholder="Buscar producto">
             <button type="submit" id="buscar" value="enviar">🔍</button>
         </div>
-    </section>
+    </form> -->
    
 
     <section class="carrito-contenido" id="carrito-contenido"></section>
