--- a/index.html
+++ b/index.html
@@ -23,17 +23,11 @@
             <a href="#contactanos">contáctanos</a>
         </nav>
             <div class="iconos"> 
-            <a href="#" class="fas fa-search" id="lupa"></a>
+            <!-- <a href="#" class="fas fa-search" id="lupa"></a> -->
             <a href="#" class="fas fa-heart" id="favoritos"></a> 
             <a href="#" class="fas fa-shopping-cart" id="verCarrito"></a>
             </div>
 
-            <div id="buscador" class="buscador">
-                <form action="" id="form">
-                    <input type="text" id="formulario" name ="formulario" placeholder="Buscar producto">
-                    <button type="submit" id="buscar" value="enviar">🔍</button>
-                </form>
-            </div>
 
     </header>
 
@@ -73,6 +67,20 @@
                 <span>Encontranos en Capital Federal</span>
             </div>
         </div>
+    </section>
+
+    <section id="buscador" class="buscador">
+        <div id="buscador" class="buscador">
+            <h1 class="titulo"> Buscar <span>Productos</span></h1>
+            <div id="form">
+                <input type="text" id="formulario" name ="formulario" placeholder="Buscar producto">
+                <button type ="submit"id="buscar" value="enviar">🔍</button>
+                <ul id="resultado">
+                    <li>iububuib</li>
+                </ul>
+            </div>
+        </div>      
+
     </section>
 
 
