--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <input type="text" id="formulario" name ="formulario" placeholder="Buscar producto">
                 <button type ="submit"id="buscar" value="enviar">🔍</button>
                 <ul id="resultado">
-                    <li>iububuib</li>
+                    <li>hola</li>
                 </ul>
             </div>
         </div>      
