--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             <a href="#productos">productos</a>
             <a href="#contactanos">contáctanos</a>
         </nav>
-            <div class="iconos"> 
-            <!-- <a href="#" class="fas fa-search" id="lupa"></a> -->
-            <a href="#" class="fas fa-heart" id="favoritos"></a> 
+            <div class="iconos">  
             <a href="#" class="fas fa-shopping-cart" id="verCarrito"></a>
             </div>
 
@@ -75,9 +73,8 @@
             <div id="form">
                 <input type="text" id="formulario" name ="formulario" placeholder="Buscar producto">
                 <button type ="submit"id="buscar" value="enviar">🔍</button>
-                <ul id="resultado">
-                    <li>hola</li>
-                </ul>
+                <div id="resultado">
+                </div>
             </div>
         </div>      
 
@@ -89,13 +86,6 @@
         <div class="caja-contenedora" id="caja-contenedora">
         </div>
     </section>
-<!-- 
-    <form class="busqueda" id="busqueda">
-        <div class="m-search-close m-moda desk custom-cursor-on-hover">
-            <input type="text" id="formulario" name ="formulario" placeholder="Buscar producto">
-            <button type="submit" id="buscar" value="enviar">🔍</button>
-        </div>
-    </form> -->
    
 
     <section class="carrito-contenido" id="carrito-contenido"></section>
